--- a/backend/src/main/resources/messages.properties
+++ b/backend/src/main/resources/messages.properties
@@ -1,3 +1,4 @@
 hoaxify.constraint.email.notunique=Email is already in use
 hoaxify.create.user.success.message=User created
 hoaxify.error.validation=Validation error
+hoaxify.create.user.email.failure=Activation email could not be sent. Please try again later
